# optivia-mvp

./: .env.example  .gitignore  HANDOFF.txt  Makefile  README.md  litellm_config.yaml  pyproject.toml
.claude/: launch.json  settings.json
.claude/commands/: optivia.md
.claude/skills/optivia/: SKILL.md
.github/workflows/: release-desktop.yml
backend/: config.py  embeddings.py  main.py  observability.py  proxy.py  synthesis.py
backend/core/: llm.py  math_core.py  models.py
backend/db/: client.py  schema.sql
backend/pipeline/: graph.py  reflection.py  state.py
backend/pipeline/nodes/: cache_lookup.py  clarification.py  classify_score.py  execution.py  experience_extractor.py  experience_retriever.py  fast_intent.py  persist.py  prompt_intake.py  quality_monitor.py  route.py  scheduler.py  session_loader.py  synthesize.py  visualizer.py
backend/routing/: __init__.py  bandit.py  base.py  heuristic.py  llm_judge.py  routellm.py  safety_router.py  shadow.py
cli/: hook_posttool.py  hook_pretool.py  main.py  mcp_server.py
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: App.css  App.tsx  Shell.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  pty.rs
frontend/: .env.local  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/traces/: page.tsx
frontend/components/: ClarificationModal.tsx  LangGraphTerminal.tsx  ResultPanel.tsx  WorkflowGraph.tsx
frontend/lib/: api.ts  utils.ts
tests/: test_agents.py  test_embeddings.py  test_hooks.py  test_math_core.py  test_proxy.py  test_routing.py
