[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]

[project]
name = "optivia"
version = "0.1.0"
description = "Pre-execution optimization layer for agentic coding CLIs"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # LangGraph / LangChain
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # LLM gateway
    "litellm>=1.45.0",
    # Deep classifier
    "instructor>=1.4.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.5.0",
    # Prompt synthesis
    "dspy-ai>=2.4.0",
    # Semantic router
    "semantic-router>=0.0.72",
    # Database
    "asyncpg>=0.29.0",
    "psycopg[binary,pool]>=3.1.0",
    "pgvector>=0.3.0",
    # Cache
    "redis[hiredis]>=5.0.0",
    # Observability
    "langfuse>=2.36.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    # CLI
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    # MCP server (Surface 2)
    "mcp>=1.0.0",
    # Embeddings
    "voyageai>=0.3.0",
    # Numerical (D-LinUCB bandit, CPM math)
    "numpy>=1.26.0",
    # Utilities
    "python-multipart>=0.0.9",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
optivia = "cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
